# stout

./: .clang-tidy  CMakeLists.txt  README.md  framework.json
cmake/: stout-config.cmake.in
demos/: CMakeLists.txt  demo_compound_file.cpp  demo_version.cpp  stout_dashboard.cpp
demos/ss_viewer/: main.cpp
demos/ss_viewer/actions/: key_handler.cpp  key_handler.h  menu_handler.cpp  menu_handler.h
demos/ss_viewer/model/: entry_info.h  paged_reader.h  stout_backend.cpp  stout_backend.h  viewer_state.h  win32_backend.cpp  win32_backend.h
demos/ss_viewer/ui/: frame_builder.cpp  frame_builder.h  help_popup.h  hex_tab.h  info_tab.h  menus.h  props_tab.h  stats_tab.h  theme.h
demos/ss_viewer/util/: format.h  hex.h
include/stout/: compound_file.h  exports.h  stout.h  types.h  version.h
include/stout/cfb/: constants.h  difat.h  directory.h  fat.h  header.h  mini_fat.h  sector_io.h
include/stout/io/: file_lock_bytes.h  lock_bytes.h  memory_lock_bytes.h
include/stout/ole/: property_set.h  property_set_storage.h
include/stout/util/: endian.h  filetime.h  guid.h  unicode.h
src/: compound_file.cpp  storage.cpp  stream.cpp  transaction.cpp
src/cfb/: difat.cpp  directory.cpp  fat.cpp  header.cpp  mini_fat.cpp  sector_io.cpp
src/io/: file_lock_bytes.cpp  memory_lock_bytes.cpp
src/ole/: property_set.cpp
src/property/: property_set.cpp  property_set_storage.cpp  property_value.cpp
src/util/: filetime.cpp  guid.cpp  unicode.cpp
testdata/: sample_excel.xls  sample_word.doc
tests/: CMakeLists.txt  compound_file_test.cpp  conformance_test.cpp  constants_test.cpp  difat_test.cpp  directory_test.cpp  endian_test.cpp  fat_test.cpp  filetime_test.cpp  guid_test.cpp  header_test.cpp  lock_bytes_test.cpp  mini_fat_test.cpp  property_set_test.cpp  sector_io_test.cpp  transaction_test.cpp  types_test.cpp  unicode_test.cpp
tests/ss_viewer/: CMakeLists.txt  test_dump_canvas.cpp  test_entry_info.cpp  test_format.cpp  test_frame_layout.cpp  test_hex.cpp  test_phase5.cpp  test_stout_backend.cpp  test_viewer_state.cpp
tests/win32_conformance/: CMakeLists.txt  conformance_utils.h  create_conformance_test.cpp  cross_read_conformance_test.cpp  enumeration_conformance_test.cpp  large_file_conformance_test.cpp  metadata_conformance_test.cpp  mini_stream_conformance_test.cpp  property_set_conformance_test.cpp  rename_destroy_conformance_test.cpp  resize_conformance_test.cpp  storage_hierarchy_conformance_test.cpp  stream_io_conformance_test.cpp  stress_concurrent_conformance_test.cpp  stress_copy_conformance_test.cpp  stress_create_conformance_test.cpp  stress_cross_api_conformance_test.cpp  stress_data_patterns_conformance_test.cpp  stress_destroy_conformance_test.cpp  stress_element_times_conformance_test.cpp  stress_enumeration_conformance_test.cpp  stress_error_handling_conformance_test.cpp  stress_exists_conformance_test.cpp  stress_hierarchy_conformance_test.cpp  stress_in_memory_conformance_test.cpp  stress_metadata_conformance_test.cpp  stress_mini_stream_conformance_test.cpp  stress_multi_stream_conformance_test.cpp  stress_naming_conformance_test.cpp  stress_property_set_conformance_test.cpp  stress_rename_conformance_test.cpp  stress_resize_conformance_test.cpp  stress_roundtrip_conformance_test.cpp  stress_sector_boundary_conformance_test.cpp  stress_stat_conformance_test.cpp  stress_storage_hierarchy_conformance_test.cpp  stress_stream_io_conformance_test.cpp  stress_transaction_conformance_test.cpp  stress_version_interop_conformance_test.cpp  transaction_conformance_test.cpp  (+2 more)
